--- a/templates/tempomat.json.erb
+++ b/templates/tempomat.json.erb
@@ -2,7 +2,7 @@
 <%- @config.each do |key,value| -%>
 	<%- if ['graphitePrefix'].include?(key) -%>
 	"<%= key %>": "<%= value.gsub(/HOSTNAME/,@hostname) %>",
-	<%- elsif ['debug','syslogStats','lowCreditThreshold','listenPort','slash32Share',
+	<%- elsif ['debug','delayThresholdSec','listenPort','cpuCount','slash32Share',
 			'slash24Share','slash16Share','userAgentShare','hashMaxLen'].include?(key) -%>
 	"<%= key %>": <%= value %>,
 	<%- else -%>
